--- a/views/albums/details.ejs
+++ b/views/albums/details.ejs
@@ -4,7 +4,7 @@
 <h1><%= album.artist %> &mdash; <%= album.title %></h1>
 <div class="row album">
     <div class="col-md-4">
-        <img src="/images/uploads/<%= album.cover %>" alt="Album Image" />
+        <img src="<%= album.cover %>" alt="<%= album.title %>Album Cover" />
     </div>
 
     <div class="col-md-8">
