--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -13,11 +13,15 @@
       type="password"
       name="password"
       class="form-control"
-      placeholder="Password"
+      placeholder="******"
+      minlength="6"
     />
   </div>
 
   <button type="submit" class="btn btn-default">Submit</button>
+
+  <br /><br />
+  <p><a href="/auth/forgot">Forgot password?</a></p>
 </form>
 
 <%- include ('../partials/footer') %>
