--- a/views/albums/add.ejs
+++ b/views/albums/add.ejs
@@ -44,7 +44,7 @@
 
     <div class="form-group">
         <label for="cover">Album Cover</label>
-        <input type="file" name="cover" class="form-control">
+        <input type="file" name="cover" accept="image/*" class="form-control">
     </div>
 
     <button type="submit" class="btn btn-default">Submit</button>
